--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%23503cff%22></rect><path fill=%22%23ffffff%22 d=%22M26.30 69.58Q21.90 69.58 18.71 68.09Q15.52 66.61 13.76 63.80L13.76 63.80L19.64 58.20Q22.17 62.27 26.41 62.27L26.41 62.27Q31.58 62.27 32.79 56.27L32.79 56.27L36.47 37.57L23.00 37.57L24.43 30.42L46.76 30.42L41.64 55.83Q40.21 63.20 36.47 66.39Q32.73 69.58 26.30 69.58L26.30 69.58ZM86.25 42.36Q86.25 47.75 83.33 51.59Q80.41 55.45 75.25 57.04L75.25 57.04L81.95 68.92L72.55 68.92L66.50 58.14L58.91 58.14L56.77 68.92L47.80 68.92L55.50 30.42L71.17 30.42Q78.32 30.42 82.28 33.55Q86.25 36.69 86.25 42.36L86.25 42.36ZM67.88 51.05Q72.33 51.05 74.78 49.01Q77.22 46.98 77.22 43.18L77.22 43.18Q77.22 40.43 75.35 39.06Q73.48 37.68 70.02 37.68L70.02 37.68L62.98 37.68L60.28 51.05L67.88 51.05Z%22></path></svg>"
     />
     <link rel="apple-touch-icon" href="img/favicon.png" />
-
     <link rel="stylesheet" href="/main.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link
+      href="http://fonts.cdnfonts.com/css/super-mario-world-text-box"
+      rel="stylesheet"
+    />
     <script src="/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/egg.js/1.0/egg.min.js"
+    ></script>
+
     <script
       src="https://kit.fontawesome.com/c2fa1517e5.js"
       crossorigin="anonymous"
@@ -35,6 +43,30 @@
       } else {
         storeTheme('dark');
       }
+    </script>
+    <script>
+      let egg = new Egg();
+      egg
+        .addCode('up,up,down,down,left,right,left,right,b,a', function () {
+          jQuery('#egggif').fadeIn(500, function () {
+            window.setTimeout(function () {
+              jQuery('#egggif').hide();
+            }, 5000);
+          });
+        })
+        .addCode('n,i,c,k', function () {
+          console.log('Nick Zimmermann');
+        })
+        .addCode('j,o,n,a,s', function () {
+          console.log('Jonas Marschall');
+        })
+        .addCode('a,w,e,s,o,m,e', function () {
+          console.log('Awesome');
+        })
+        .addHook(function () {
+          console.log('This is message is called if any easter egg is found!');
+        })
+        .listen();
     </script>
   </head>
 
@@ -196,6 +228,26 @@
     </header>
 
     <main>
+      <!-- ----------------------------- Easter Eggs ----------------------------- -->
+      <div class="mario-msg" style="transform: matrix(1, 0, 0, 1, -320, -240)">
+        Hooray! Thanks for jumping so many times. <br /><span class="-purple"
+          >You found all the coins!</span
+        ><br />&nbsp;<br />
+        Keep scrolling, you're near the end!
+
+        <div class="later" style="visibility: inherit; opacity: 1">
+          ;)
+          <button
+            type="button"
+            title="Close message"
+            class="mario-msg-close"
+            control-id="ControlID-1"
+          >
+            ✕
+          </button>
+        </div>
+      </div>
+
       <div id="vhs">
         <div id="crt-lines"></div>
         <div id="darken"></div>
