Fix Mixed Content Issue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="img/favicon.png" />
     <link rel="stylesheet" href="/main.css" />
     <link
-      href="http://fonts.cdnfonts.com/css/super-mario-world-text-box"
+      href="https://fonts.cdnfonts.com/css/super-mario-world-text-box"
       rel="stylesheet"
     />
     <script src="/app.js"></script>
@@ -194,8 +194,8 @@
                 </div>
                 <div class="language-dropdown dropdown-container">
                   <select class="dropdown">
-                    <option onclick="SwitchLang(Deutsch)">Deutsch</option>
-                    <option onclick="SwitchLang(English)">English</option>
+                    <option onclick="SwitchLang(DE)">DE</option>
+                    <option onclick="SwitchLang(EN)">EN</option>
                   </select>
                   <span class="dropdown-icon icon icon-chevrondown"></span>
                 </div>
@@ -248,7 +248,7 @@
 
     <main>
       <!-- ----------------------------- Easter Eggs ----------------------------- -->
-      <div class="mario-msg" style="transform: matrix(1, 0, 0, 1, -320, -240)">
+      <!-- <div class="mario-msg" style="transform: matrix(1, 0, 0, 1, -320, -240)">
         Hooray! Thanks for jumping so many times. <br /><span class="-purple"
           >You found all the coins!</span
         ><br />&nbsp;<br />
@@ -265,7 +265,7 @@
             ✕
           </button>
         </div>
-      </div>
+      </div> -->
 
       <div id="vhs">
         <div id="crt-lines"></div>
