--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
         <ul class="grid">
           <!-- Item 1 -->
           <li class="row-full">
-            <div class="padding-right-small">
+            <div class="article-image-wrapper">
               <svg
                 class="article-image"
                 width="20"
@@ -745,7 +745,7 @@
 
           <!-- Item 2 -->
           <li class="row-full">
-            <div class="padding-right-small">
+            <div class="article-image-wrapper">
               <svg
                 class="article-image"
                 width="20"
@@ -828,7 +828,7 @@
 
           <!-- Item 3 -->
           <li class="row-full">
-            <div class="padding-right-small">
+            <div class="article-image-wrapper">
               <svg
                 class="article-image"
                 width="20"
@@ -884,7 +884,7 @@
         <ul class="grid">
           <!-- Item 1 -->
           <li class="row-full">
-            <div class="padding-right-small">
+            <div class="article-image-wrapper">
               <svg
                 class="article-image"
                 width="20"
@@ -944,7 +944,7 @@
 
           <!-- Item 2 -->
           <li class="row-full">
-            <div class="padding-right-small">
+            <div class="article-image-wrapper">
               <svg
                 class="article-image"
                 width="20"
@@ -1633,7 +1633,7 @@
           <ul class="timeline" id="timeline-id">
             <!-- Item 1 -->
             <li class="row-full" id="first-steps">
-              <div class="padding-right-small">
+              <div class="article-image-wrapper">
                 <svg
                   class="svg-icon"
                   width="25"
@@ -1664,7 +1664,7 @@
 
             <!-- Item 2 -->
             <li class="row-full" id="nex-cc">
-              <div class="padding-right-small">
+              <div class="article-image-wrapper">
                 <svg
                   class="svg-icon"
                   width="25"
@@ -1699,7 +1699,7 @@
 
             <!-- Item 3 -->
             <li class="row-full" id="banking-automation">
-              <div class="padding-right-small">
+              <div class="article-image-wrapper">
                 <svg
                   class="svg-icon"
                   width="25"
